Fix alignment of message in Add step box #392

--- a/examples/demo.css
+++ b/examples/demo.css
@@ -115,3 +115,8 @@ h1 {
   display: block;
   margin: 0 auto;
 }
+
+.info {
+padding: 8px;
+text-align: cente;
+}
